# dc-updown-journey

./: .clang-format  .clang-tidy  .clangd  .clangd copy  .gitignore  CMakeLists.txt  CMakeLists_test.txt  Makefile  README.md  SCENE_SYSTEM.md  WIDGET_SYSTEM.md  build-dreamcast-debug.sh  build-linux.sh  imgui.ini  naming-convention-guidelines.md  setup-dev-env.sh  test_monster_preset.cpp
.devcontainer/: Dockerfile  (+5 more)
src/udj-core/: CMakeLists.txt
src/udj-core/include/udj-core/: CoreUtils.hpp  ICommand.hpp  Logger.hpp
src/udj-core/include/udj-core/events/: EventDispatcher.hpp  EventPlugin.hpp  ScoreEvent.hpp  WeaponSelectedEvent.hpp
src/udj-core/include/udjourney/: AnimationConfig.hpp
src/udj-core/src/: CoreUtils.cpp  FileSystemUtils.cpp  Logger.cpp  MathUtils.cpp
src/udjourney/: Actor.hpp  Bonus.cpp  Bonus.hpp  CMakeLists.txt  Game.cpp  Game.hpp  IActor.hpp  IGame.hpp  IObserver.hpp  Platform.cpp  Platform.hpp  Player.cpp  Player.hpp  main.cpp
src/udjourney-editor/: CMakeLists.txt  assets  imgui.ini  main.cpp
src/udjourney-editor/include/udjourney-editor/: AnimationPresetPanel.hpp  DockingHelper.hpp  Editor.hpp  EditorPanel.hpp  EditorScene.hpp  EditorSettings.hpp  Level.hpp  MonsterPresetManager.hpp  ObjectPanel.hpp  ParticlePresetPanel.hpp  PlatformPresetManager.hpp  TilePanel.hpp  ToastNotification.hpp
src/udjourney-editor/src/: AnimationPresetPanel.cpp  DockingHelper.cpp  Editor.cpp  EditorPanel.cpp  EditorScene.cpp  MonsterPresetManager.cpp  ParticlePresetPanel.cpp  PlatformPresetManager.cpp  TilePanel.cpp  main.cpp
src/udjourney-editor/src/background/: BackgroundLayer.cpp  BackgroundManager.cpp  BackgroundObjectPresetManager.cpp  BackgroundPanel.cpp
src/udjourney-editor/src/fud/: ButtonFUDRenderer.cpp  FUDElement.cpp  FUDPresetManager.cpp  HealthBarFUDRenderer.cpp  HeartHealthFUDRenderer.cpp  IFUDRenderer.cpp  ScoreDisplayFUDRenderer.cpp  ScrollableListFUDRenderer.cpp  TimerFUDRenderer.cpp  UIAtlasPresetManager.cpp
src/udjourney-editor/src/hud/: ButtonHUDRenderer.cpp  HUDElement.cpp  HUDPresetManager.cpp  HealthBarHUDRenderer.cpp  HeartHealthHUDRenderer.cpp  IHUDRenderer.cpp  ScoreDisplayHUDRenderer.cpp  ScrollableListHUDRenderer.cpp  TimerHUDRenderer.cpp  UIAtlasPresetManager.cpp  WeaponHUDRenderer.cpp
src/udjourney-editor/src/mode_handlers/: BackgroundModeHandler.cpp  FUDModeHandler.cpp  HUDModeHandler.cpp  MonsterModeHandler.cpp  PlatformModeHandler.cpp  SpawnModeHandler.cpp  TileModeHandler.cpp
src/udjourney-editor/src/ui/: NewLevelPopup.cpp
src/udjourney-editor/tests/: CMakeLists.txt  test_asset_access.cpp  test_background.cpp  test_editorpanel.cpp  test_helpers.hpp  test_json_operations.cpp  test_monster_preset_manager.cpp  test_tilemap_json.cpp  test_tilemap_json_simple.cpp  test_tilepanel.cpp
src/udjourney-editor/tests/helpers/: GraphicsTestManager.cpp  GraphicsTestManager.hpp
src/udjourney/include/: SpriteAnim.hpp  dreamcast_json_compat.h
src/udjourney/include/udjourney/: ActionDispatcher.hpp  ActorFactory.hpp  AnimSpriteController.hpp  AnimationConfig.hpp  Bonus.hpp  BonusManager.hpp  CoreUtils.hpp  Game.hpp  IActor.hpp  IGame.hpp  IObserver.hpp  LevelMetadata.hpp  Monster.hpp  MonsterPreset.hpp  Platform.hpp  Player.hpp  Projectile.hpp  ProjectilePresetLoader.hpp  ScoreHistory.hpp  SpriteAnim.hpp  WorldBounds.hpp  dreamcast_json_compat.h
src/udjourney/romdisk/: background_presets.json  menu_config.json  particles.json  platform_presets.json  projectiles.json
src/udjourney/romdisk/animations/: monster_animations.json  player_animations.json  poring_animations.json  spider_animations.json
src/udjourney/romdisk/fuds/: healthbar.json  heart_health.json  icon_button.json  large_button.json  mana_bar.json  menu_button.json  score_display.json  small_button.json  textured_button.json  timer.json
src/udjourney/romdisk/huds/: healthbar.json  heart_bar.json  heart_health.json  large_button.json  mana_bar.json  menu_button.json  scrollable_list.json  timer copy.json  timer.json  weapon_display.json
src/udjourney/romdisk/levels/: a1json.json  a_range1.json  a_test_platform_texture.json  a_testbg.json  abc.json  background_level.json  buggedlevel.json  escalator_test.json  game_over_screen.json  level1.json  level_select_screen.json  longlevel1.json  lv_test_new_monsters.json  monster_test.json  monsters_all_test.json  my_platform_level.json  stairs.json  stairs2.json  test_borders.json  test_monster_position.json  title_screen.json  tmp.json  win_screen.json
src/udjourney/romdisk/monsters/: goblin.json  poring.json  spider.json  test_monster.json
src/udjourney/romdisk/ui_atlas/: ui_elements.json
src/udjourney/src/: ActionDispatcher.cpp  AnimSpriteController.cpp  Bonus.cpp  BonusManager.cpp  Game.cpp  LevelMetadata.cpp  Monster.cpp  MonsterPresetLoader.cpp  Platform.cpp  Player.cpp  Projectile.cpp  ProjectilePresetLoader.cpp  ScoreHistory.cpp  SpriteAnim.cpp  WorldBounds.cpp  main.cpp
src/udjourney/src/components/: ParticleEmitterComponent.cpp  StateComponent.cpp
src/udjourney/src/factories/: ActorFactory.cpp  PlatformFactory.cpp  UiFactory.cpp
src/udjourney/src/hud/: DialogBoxHUD.cpp  GameMenuHUD.cpp  LevelSelectHUD.cpp  ScoreHUD.cpp  WeaponHUD.cpp
src/udjourney/src/loaders/: AnimationConfigLoader.cpp  ParticlePresetLoader.cpp
src/udjourney/src/managers/: BackgroundManager.cpp  BonusManager.cpp  HUDManager.cpp  LevelSelectManager.cpp  MenuManager.cpp  ParticleManager.cpp  TextureManager.cpp
src/udjourney/src/particle/: Particle.cpp  ParticleEmitter.cpp
src/udjourney/src/platform/: Platform.cpp
src/udjourney/src/render/: StateRenderers.cpp
src/udjourney/src/scene/: Scene.cpp
src/udjourney/src/states/: MonsterStates.cpp
src/udjourney/src/widgets/: ButtonWidget.cpp  ScrollableListWidget.cpp  WidgetFactory.cpp
tests/: CMakeLists.txt  README.md  test_main.cpp
tests/monster/: test_monster_states.cpp  test_monster_states_simple.cpp
tests/scene/: test_coordinate_conversion.cpp  test_platform_reuse.cpp  test_scene.cpp  test_scene_serialization.cpp
tests/test_data/: invalid_scene.json  valid_scene.json
(+151 files in other folders)
